[package]
name = "ultimate_ttt"
version = "0.1.0"
authors = ["Arne Bouillon <arne.bouillon@student.kuleuven.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"

[profile.release]
opt-level = 3
lto = true
debug-assertions = false
codegen-units = 1
overflow-checks = false
